Sync from private tree @ 671a93f